spacing fix for reviews

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,8 @@ section {
   margin: 0px auto;
   max-width: 1200px;
   position: relative;
-  padding: 0px 25px;
+  box-sizing: border-box;
+  padding: 0px 35px;
 }
 
 nav {
@@ -107,9 +108,10 @@ main {
 }
 
 #reviews > .width-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0px 20px; /* hack-y fix for the margins between the flexboxes */
 }
 #reviews .review {
   flex: 1 1 350px;
@@ -120,8 +122,6 @@ main {
   border-right: none;
   margin: 15px;
 }
-#reviews .review:first-child { margin-left: 0px; }
-#reviews .review:last-child { margin-right: 0px; }
 .review-wrapper {
   max-height: 350px;
   overflow: hidden;
@@ -137,7 +137,6 @@ main {
 }
 #blogs {
   background: rgba(128, 128, 128, 0.1);
-  margin: -100px;
   margin-top: 25px;
   padding-bottom: 100px;
   padding-top: 25px;
